// This proto file is used for legacy proto-format configuration.
// This legacy configuration should be removed (with this file): https://st.yandex-team.ru/YT-11444
//
// This file is copy-pasted from arcadia and should not be modified.

import "google/protobuf/descriptor.proto";

package NYT.NFormats.NProto;

// Declare the actual enum inside a message to restrict visibility of names.
message ESerializationMode {
    enum Enum
    {
        PROTOBUF = 0;
        YT = 1;
    }
}

extend google.protobuf.FieldOptions
{
    optional ESerializationMode.Enum serialization_mode = 56788;
    optional string column_name = 56789;
    optional string key_column_name = 56790;
}

extend google.protobuf.MessageOptions
{
    optional ESerializationMode.Enum field_serialization_mode = 56788 [default = PROTOBUF];
}
